--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body.dark button.location-toggle {
 <!-- Локации слева -->
 <div id="locationMenu">
   <h2>Локации</h2>
-  <button onclick="goToLocation('main.html')">Главная 🏠</button>
+  <button onclick="goToLocation('index.html')">Главная 🏠</button>
   <button onclick="goToLocation('forest.html')">Лес 🌳</button>
   <button onclick="goToLocation('space.html')">Космос 🚀</button>
   <button onclick="goToLocation('casino.html')">🎰 Казино</button>
