--- a/casino.html
+++ b/casino.html
@@ -253,7 +253,7 @@
     }
 
     function goBack() {
-      location.href = "main.html"; // замените на вашу основную страницу
+      location.href = "index.html"; // замените на вашу основную страницу
     }
 
     drawWheel();
