--- a/casino.html
+++ b/casino.html
@@ -252,8 +252,8 @@
       }, 4200);
     }
 
-    function goBack() {
-      location.href = "index.html"; // замените на вашу основную страницу
+        function goToMain() {
+      window.location.href = "index.html"; // вернуться на главную локацию
     }
 
     drawWheel();
