--- a/casino.html
+++ b/casino.html
@@ -127,7 +127,9 @@
 </head>
 <body>
   <h1>🎰 Казино</h1>
-  <button class="back-button" onclick="goBack()">⬅ Назад</button>
+    <div class="progress-wrapper">
+    <button class="location-toggle" onclick="goToMain()">🌍</button>
+    </div>
 
   <div class="score">Очки: <span id="points">0</span></div>
 
